# website-blocker

./: .gitignore  background.js  blocked.html  content.js  manifest.json  options.html  options.js  popup.html  popup.js  rules.js  storage.js  styles.css
native/: Cargo.toml  install.bat  install_host.bat
native/src/: config.rs  hosts_manager.rs  main.rs  native_messaging.rs  password.rs  platform.rs  registry.rs  watchdog.rs
website/: .env.local.example  extension-integration.example.js  package-lock.json  package.json  tailwind.config.ts
website/src/: middleware.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/api/billing/portal/: route.ts
website/src/app/api/checkout/: route.ts
website/src/app/api/stripe/webhook/: route.ts
website/src/app/api/user/plan/: route.ts
website/src/app/api/user/settings/: route.ts
website/src/app/dashboard/: page.tsx
website/src/app/login/: page.tsx
website/src/app/pricing/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/signup/: page.tsx
website/src/components/: Header.tsx  PricingTable.tsx
website/src/lib/: auth.ts  stripe.ts
website/src/lib/supabase/: server.ts
website/supabase/: schema.sql
