[package]
name = "focus-blocker-native"
version = "0.1.0"
edition = "2021"
description = "Native enforcement agent for Focus Blocker — system-level domain blocking via hosts file."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.5", features = ["std"] }
directories = "5"
thiserror = "1"
fs2 = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
